--- a/practica - 01/signin.html
+++ b/practica - 01/signin.html
@@ -8,28 +8,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Inicia Sesion</title>
+    <title>Registrarse</title>
 </head>
 <body>
 
-    <div class="login" style="margin: 0;">
+    <div class="login">
         <div class="side-a">
-            <h1>INICIAR SESION</h1>
-            <form action="index.html" autocomplete="off">
+            <h1>REGISTRATE</h1>
+            <form action="index.html" autocomplete="off" class="reg">
+                <label>Nombre</label><br>
+				<div class="inputs"><input type="text" name="name" required=""></div>
+                <br>
+                <label>Apellidos</label><br>
+				<div class="inputs"><input type="text" name="apellidos" required=""></div>
+                <br>
+                <label>Fecha de nacimiento</label><br>
+				<div class="inputs"><input type="date" name="birthday" required=""></div>
+                <br>
                 <label>Correo</label><br>
 				<div class="inputs"><input type="email" name="email" required=""></div>
+                <br>
+                <label>Confirma tu correo</label><br>
+				<div class="inputs"><input type="email" name="emailConf" required=""></div>
                 <br>
                 <label>Contraseña</label><br>
 				<div class="inputs"><input type="password" name="pswd" required=""></div>
                 <br>
-                <div class="remember">
-                    <input type="checkbox" id="remember" name="remember">
-                    <label for="remember">Recuérdame</label>
-                </div>
+                <label>Confirma la contraseña</label><br>
+				<div class="inputs"><input type="password" name="pswdConf" required=""></div>
                 <br>
 				<button>ENTRAR</button>
             </form>
-            <a href="signin.html" class="sign"> No tienes cuenta aun? Registrate!</a>
+            <a href="login.html" class="sign"> Ya tienes una cuenta? Inicia sesion!</a>
         </div>
     </div>
     
