--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <h2>PRACTICAS</h2>
         <ul>
             <li><a href="practica - 01/">Practica 01</a></li>
+            <li><a href="practica - 02/">Practica (salon) 02</a></li>
+            <li><a href="02. Tic tac toe/">Practica 02. Tic tac toe</a></li>
         </ul>
         <hr/>
         <h1>Solo para pruebas ok</h1>
