--- a/02. Tic tac toe/index.html
+++ b/02. Tic tac toe/index.html
@@ -26,15 +26,15 @@
                 </div>
 
                 <div class="board">
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="celda"></div>
+                    <div class="celda"></div>
+                    <div class="celda"></div>
+                    <div class="celda"></div>
+                    <div class="celda"></div>
+                    <div class="celda"></div>
+                    <div class="celda"></div>
+                    <div class="celda"></div>
+                    <div class="celda"></div>
                 </div>
     
                 <button id="reiniciar">Reiniciar</button>
