--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="practica - 01/">Practica 01</a></li>
             <li><a href="practica - 02/">Practica (salon) 02</a></li>
             <li><a href="02. Tic tac toe/">Practica 02. Tic tac toe</a></li>
+            <li><a href="03. Buscaminas/">Practica 03. Buscaminas</a></li>
         </ul>
         <hr/>
         <h1>Solo para pruebas ok</h1>
