--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <li><a href="practica - 02/">Practica (salon) 02</a></li>
             <li><a href="02. Tic tac toe/">Practica 02. Tic tac toe</a></li>
             <li><a href="03. Buscaminas/">Practica 03. Buscaminas</a></li>
+            <li><a href="practica05-1/">Practica 05. Login</a></li>
+            <li><a href="tictactoe/">Practica 06. Tic tac toe</a></li>
+            <li><a href="pikapic/">pikapic</a></li>
         </ul>
         <hr/>
         <h1>Solo para pruebas ok</h1>
