--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="03. Buscaminas/">Practica 03. Buscaminas</a></li>
             <li><a href="practica05-1/">Practica 05. Login</a></li>
             <li><a href="tictactoe/">Practica 06. Tic tac toe</a></li>
-            <li><a href="pikapic/">pikapic</a></li>
+            <li><a href="pikapic/html/welcome.html">pikapic</a></li>
         </ul>
         <hr/>
         <h1>Solo para pruebas ok</h1>
