--- a/pikapic/html/profile.html
+++ b/pikapic/html/profile.html
@@ -88,8 +88,8 @@
     </ul>
 
     <!-- west side dices tu -->
-    <div class="w-100 p-4">
-
+    <div class="w-100 p-4"> 
+         
         <!-- navbar para pantallas pequeñas -->
         <nav class="navbar navbar-expand-lg d-md-none mb-5 align-items-center justify-content-center sticky-top bg-white border-bottom">
             <div class="container-fluid">
@@ -106,7 +106,7 @@
         
                 <!-- Menú colapsable -->
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav michroma ms-auto flex-column py-3 gap-3">
+                    <ul class="navbar-nav michroma ms-auto flex-column p-2 gap-3">
                         <!-- Home -->
                         <li class="nav-item">
                             <a class="nav-link d-flex gap-4" href="dashboard.html">
