--- a/pikapic/html/register.html
+++ b/pikapic/html/register.html
@@ -11,9 +11,9 @@
     <title>Unete al jardín</title>
 </head>
 
-<body class="d-flex flex-column justify-content-center align-items-center bg-flower gap-4 p-4">
+<body class="d-flex flex-column h-100 justify-content-center align-items-center bg-flower gap-4 p-4">
 
-    <form id="register-form" class="w-50 bg-white p-5 rounded-4">
+    <form id="register-form" class="align-items-center container-lg-50 bg-white p-4 p-md-5 rounded-4">
 
         <div class="mb-4">
             <div class="michroma fs-2">Registro</div>
@@ -22,11 +22,11 @@
 
         <!-- username & email -->
         <div class="row mb-3 g-3">
-            <div class="col-md-6">
+            <div class="col-12 col-md-6">
                 <label for="username" class="form-label">Username*</label>
                 <input type="text" class="form-control" id="username" placeholder="Ingresa tu nombre de usuario" required>
             </div>
-            <div class="col-md-6">
+            <div class="col-12 col-md-6">
                 <label for="email" class="form-label">Email*</label>
                 <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico" required>
             </div>
@@ -34,11 +34,11 @@
 
         <!-- nombre & apellidos -->
         <div class="row mb-3 g-3">
-            <div class="col-md-6">
+            <div class="col-12 col-md-6">
                 <label for="name" class="form-label">Nombre*</label>
                 <input type="text" class="form-control" id="name" placeholder="Ingresa tu nombre completo" required>
             </div>
-            <div class="col-md-6">
+            <div class="col-12 col-md-6">
                 <label for="lastname" class="form-label">Apellidos</label>
                 <input type="text" class="form-control" id="lastname" placeholder="Ingresa tus apellidos">
             </div>
@@ -46,25 +46,23 @@
 
         <!-- password & confirm -->
         <div class="row mb-3 g-3">
-            <div class="col-md-6">
+            <div class="col-12 col-md-6">
                 <label for="password" class="form-label">Contraseña*</label>
                 <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required>
             </div>
-            <div class="col-md-6">
+            <div class="col-12 col-md-6">
                 <label for="confirm-password" class="form-label">Confirmar Contraseña*</label>
                 <input type="password" class="form-control" id="confirm-password" placeholder="Confirma tu contraseña" required>
             </div>
         </div>
-        <div class="mb-3">
-        </div>
 
         <!-- fecha de nacimiento & género -->
         <div class="row mb-3 g-3">
-            <div class="col-md-6">
+            <div class="col-12 col-md-6">
                 <label for="dob" class="form-label">Fecha de Nacimiento*</label>
                 <input type="date" class="form-control" id="dob" required>
             </div>
-            <div class="col-md-6">
+            <div class="col-12 col-md-6">
                 <label for="gender" class="form-label">Género*</label>
                 <select class="form-select" id="gender" required>
                     <option value="">Seleccione</option>
@@ -74,7 +72,7 @@
                     <option value="Prefiero no Decirlo">Prefiero no Decirlo</option>
                     <option value="Otro">Otro</option>
                 </select>
-                <div id="other-gender" class="mt-3" style="display: none;">
+                <div id="other-gender" class="mt-3 d-none">
                     <label for="other-gender-input" class="form-label">Especificar</label>
                     <input type="text" class="form-control" id="other-gender-input" placeholder="Especifica tu género">
                 </div>
@@ -85,9 +83,7 @@
         
     </form>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../js/script.js"></script>
-
 </body>
+
 
 </html>
