pikapic : welcome users

--- a/pikapic/html/welcome.html
+++ b/pikapic/html/welcome.html
@@ -26,24 +26,183 @@
         <a class="btn btn-flower boton px-4 py-2" href="register.html">Registrarse</a>
     </div>
 
+    
     <!-- Hero Section -->
     <div class="container mt-4">
-        <div class="row g-5">
-            <div class="col-md-6 text-center">
-                <img src="../img/seagirl.png" alt="Ejemplo" class="img-fluid rounded-3">
-            </div>
-            <div class="col-md-6 justify-content-start">
-                <div class="text-dark fs-4 michroma mb-3">CULTIVATE JUNTO A UNA COMUNIDAD ACTIVA Y LLENA DE CREATIVIDAD</div>
-                <p class="lead fs-6">
-                    Somos una red social creada para quienes se expresan con imágenes.
-                    Dicen que una imagen vale más que mil palabras, y aquí cada foto cuenta una historia. 
-                    Sumérgete en una experiencia visual única, vibrante y relajante, donde la creatividad 
-                    florece y las conexiones cobran vida.
-                </p>
-            </div>
-        </div>
+      <div class="row g-5">
+          <div class="col-md-6 text-center">
+              <img src="../img/seagirl.png" alt="Ejemplo" class="img-fluid rounded-3">
+          </div>
+          <div class="col-md-6 justify-content-start">
+              <div class="text-dark fs-4 michroma mb-3">CULTIVATE JUNTO A UNA COMUNIDAD ACTIVA Y LLENA DE CREATIVIDAD</div>
+              <p class="lead fs-6">
+                  Somos una red social creada para quienes se expresan con imágenes.
+                  Dicen que una imagen vale más que mil palabras, y aquí cada foto cuenta una historia. 
+                  Sumérgete en una experiencia visual única, vibrante y relajante, donde la creatividad 
+                  florece y las conexiones cobran vida.
+              </p>
+          </div>
+      </div>
     </div>
 
+    <!-- feed d posts -->
+    <div class="container col-12">
+      <div id="carouselExample" class="carousel slide" data-bs-ride="carousel carousel-fade">
+          <div class="carousel-inner">
+            <!-- 1 -->
+            <div class="carousel-item active">
+              <!-- Post extendido -->
+              <div class="d-flex col-12 border rounded-3 flex-column flex-lg-row">
+                <div class="col-lg-5 p-0">
+                  <img src="../img/pf-aridos.jpeg" alt="Ejemplo" class="rounded-3 img-fluid">
+                </div>
+                <div class="col-lg-7 d-flex flex-column flex-grow-1 bg-white p-4">
+                  <div class="d-flex mb-4 pb-2 border-bottom">
+                    <div class="d-flex gap-3 flex-grow-1">
+                      <img src="../img/profile.jpg" alt="" class="rounded-circle" width="30" height="30">
+                      <p><span class="fw-bold">Ariana Grande</span> • 4hr</p>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-column flex-grow-1">
+                    i’m droppin a nw ep soon!!! soooooooooooooooo stay tune 3
+                  </div>
+                  <div class="d-flex flex-wrap mt-4 gap-3">
+                    <!-- Iconos de interacciones -->
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M4.3314 12.2511L12 20.2037L19.6686 12.2511C20.5211 11.3671 21 10.168 21 8.91778C21 6.31429 18.9648 4.20374 16.4543 4.20374C15.2487 4.20374 14.0925 4.70039 13.24 5.58445L12 6.8704L10.76 5.58445C9.90749 4.70039 8.75128 4.20374 7.54569 4.20374C5.03517 4.20374 3 6.31429 3 8.91778C3 10.168 3.47892 11.3671 4.3314 12.2511Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 likes-count">27k</p>
+                    </div>
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M6 6.20374C6 5.09917 6.89543 4.20374 8 4.20374H16C17.1046 4.20374 18 5.09917 18 6.20374V21.2037L12 15.2037L6 21.2037V6.20374Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 comments-count">27k</p>
+                    </div>
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M8 9.70374H15M8 13.7037H13M15.3 19.3038L21 21.2038L19.1 15.5038C19.1 15.5038 20 14.2037 20 11.7037C20 7.00932 16.1944 3.20374 11.5 3.20374C6.80558 3.20374 3 7.00932 3 11.7037C3 16.3982 6.80558 20.2037 11.5 20.2037C14.0847 20.2037 15.3 19.3038 15.3 19.3038Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 shares-count">27k</p>
+                    </div>
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M20 13.2037V18.2037C20 19.3083 19.1046 20.2037 18 20.2037H6C4.89543 20.2037 4 19.3083 4 18.2037L4 13.2037M16 8.20374L12 4.20374M12 4.20374L8 8.20373M12 4.20374L12 16.2037" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 save-count">27k</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- 2 -->
+            <div class="carousel-item">
+              <!-- Post extendido -->
+              <div class="d-flex col-12 border rounded-3 flex-column flex-lg-row">
+                <div class="col-lg-5 p-0">
+                  <img src="../img/pf-dressup.jpeg" alt="Ejemplo" class="rounded-3 img-fluid">
+                </div>
+                <div class="col-lg-7 d-flex flex-column flex-grow-1 bg-white p-4">
+                  <div class="d-flex mb-4 pb-2 border-bottom">
+                    <div class="d-flex gap-3 flex-grow-1">
+                      <img src="../img/profile.jpg" alt="" class="rounded-circle" width="30" height="30">
+                      <p><span class="fw-bold">Maria</span> • 2min</p>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-column flex-grow-1">
+                    my dressup darling
+                  </div>
+                  <div class="d-flex flex-wrap mt-4 gap-3">
+                    <!-- Iconos de interacciones -->
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M4.3314 12.2511L12 20.2037L19.6686 12.2511C20.5211 11.3671 21 10.168 21 8.91778C21 6.31429 18.9648 4.20374 16.4543 4.20374C15.2487 4.20374 14.0925 4.70039 13.24 5.58445L12 6.8704L10.76 5.58445C9.90749 4.70039 8.75128 4.20374 7.54569 4.20374C5.03517 4.20374 3 6.31429 3 8.91778C3 10.168 3.47892 11.3671 4.3314 12.2511Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 likes-count">27k</p>
+                    </div>
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M6 6.20374C6 5.09917 6.89543 4.20374 8 4.20374H16C17.1046 4.20374 18 5.09917 18 6.20374V21.2037L12 15.2037L6 21.2037V6.20374Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 comments-count">27k</p>
+                    </div>
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M8 9.70374H15M8 13.7037H13M15.3 19.3038L21 21.2038L19.1 15.5038C19.1 15.5038 20 14.2037 20 11.7037C20 7.00932 16.1944 3.20374 11.5 3.20374C6.80558 3.20374 3 7.00932 3 11.7037C3 16.3982 6.80558 20.2037 11.5 20.2037C14.0847 20.2037 15.3 19.3038 15.3 19.3038Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 shares-count">27k</p>
+                    </div>
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M20 13.2037V18.2037C20 19.3083 19.1046 20.2037 18 20.2037H6C4.89543 20.2037 4 19.3083 4 18.2037L4 13.2037M16 8.20374L12 4.20374M12 4.20374L8 8.20373M12 4.20374L12 16.2037" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 save-count">27k</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- 3 -->
+            <div class="carousel-item">
+              <!-- Post extendido -->
+              <div class="d-flex col-12 border rounded-3 flex-column flex-lg-row ">
+                <div class="col-lg-5 p-0">
+                  <img src="../img/pf-id.jpeg" alt="Ejemplo" class="rounded-3 img-fluid">
+                </div>
+                <div class="col-lg-7 d-flex flex-column flex-grow-1 bg-white p-4">
+                  <div class="d-flex mb-4 pb-2 border-bottom">
+                    <div class="d-flex gap-3 flex-grow-1">
+                      <img src="../img/profile.jpg" alt="" class="rounded-circle" width="30" height="30">
+                      <p><span class="fw-bold">kaliuchisfans</span> • 1s</p>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-column flex-grow-1">
+                    el id d kali uchis siempre iconic
+                  </div>
+                  <div class="d-flex flex-wrap mt-4 gap-3">
+                    <!-- Iconos de interacciones -->
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M4.3314 12.2511L12 20.2037L19.6686 12.2511C20.5211 11.3671 21 10.168 21 8.91778C21 6.31429 18.9648 4.20374 16.4543 4.20374C15.2487 4.20374 14.0925 4.70039 13.24 5.58445L12 6.8704L10.76 5.58445C9.90749 4.70039 8.75128 4.20374 7.54569 4.20374C5.03517 4.20374 3 6.31429 3 8.91778C3 10.168 3.47892 11.3671 4.3314 12.2511Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 likes-count">27k</p>
+                    </div>
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M6 6.20374C6 5.09917 6.89543 4.20374 8 4.20374H16C17.1046 4.20374 18 5.09917 18 6.20374V21.2037L12 15.2037L6 21.2037V6.20374Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 comments-count">27k</p>
+                    </div>
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M8 9.70374H15M8 13.7037H13M15.3 19.3038L21 21.2038L19.1 15.5038C19.1 15.5038 20 14.2037 20 11.7037C20 7.00932 16.1944 3.20374 11.5 3.20374C6.80558 3.20374 3 7.00932 3 11.7037C3 16.3982 6.80558 20.2037 11.5 20.2037C14.0847 20.2037 15.3 19.3038 15.3 19.3038Z" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 shares-count">27k</p>
+                    </div>
+                    <div class="d-flex gap-2 align-items-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M20 13.2037V18.2037C20 19.3083 19.1046 20.2037 18 20.2037H6C4.89543 20.2037 4 19.3083 4 18.2037L4 13.2037M16 8.20374L12 4.20374M12 4.20374L8 8.20373M12 4.20374L12 16.2037" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                      <p class="m-0 save-count">27k</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Controles de navegación -->
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </button>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    
 </body>
 
 </html>
