pikapic : state of mind en sm devidces

--- a/pikapic/html/dashboard.html
+++ b/pikapic/html/dashboard.html
@@ -279,7 +279,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-12 post" data-post-id="4">
-                                <img src="../img/pf-monachina.jpeg" alt="Ejemplo" class="img-fluid border rounded-3 border-bottom-0 rounded-bottom-0">
+                                <img src="../img/pf-monachina.jpeg" alt="Ejemplo" class="w-100 border rounded-3 border-bottom-0 rounded-bottom-0">
                                 <div class="d-flex gap-3 p-3 border rounded-3 border-top-0 rounded-top-0">
                                     <img src="../img/profile.jpg" alt="" class="rounded-circle" width="30">
                                     Ariana Grande • 4hr
@@ -293,7 +293,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-12 post" data-post-id="6">
-                                <img src="../img/pf-runaway.jpeg" alt="Ejemplo" class="img-fluid border rounded-3 border-bottom-0 rounded-bottom-0">
+                                <img src="../img/pf-runaway.jpeg" alt="Ejemplo" class="w-100 border rounded-3 border-bottom-0 rounded-bottom-0">
                                 <div class="d-flex gap-3 p-3 border rounded-3 border-top-0 rounded-top-0">
                                     <img src="../img/profile.jpg" alt="" class="rounded-circle" width="30">
                                     Ariana Grande • 4hr
@@ -329,7 +329,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="rounded-3 mb-5 col-md-12 order-sm-first order-md-first d-none d-sm-block d-md-block d-lg-none">
+                    <div class="rounded-3 mb-5 order-sm-first order-first d-sm-block d-md-block d-lg-none">
                         <div class="sm-states">
                             <h1 class="fs-5 m-0 michroma">States of mind</h1>
                             <p>Comparte con tus amigos como te sientes</p>
