--- a/pikapic/html/profile.html
+++ b/pikapic/html/profile.html
@@ -188,7 +188,7 @@
         </div>
         <!-- user -->
         <div class="d-flex flex-column gap-2">
-            <div class="container">
+            <div class="container p-0">
                 <div class="bg-user rounded-3 p-4">
                     <img class="rounded-circle" src="../img/profile.jpg" alt="" width="100">
                 </div>
@@ -201,10 +201,10 @@
                     </div>
                 </div>
                 <div class="p-2 mb-4 border-bottom">
-                    <p class="fs-6 fs-md-5">konnichiwa tontas, PE RREO HASTA ABAJO, AUUUTUESTIMA HASTA ARRIBAAA</p>
+                    <p class="fs-6 fs-md-5">konnichiwa tontas, PE RREO HASTA ABAJO, AUUUTOESTIMA HASTA ARRIBAAA</p>
                 </div>                
             </div>
-            <div class="container">
+            <div class="container p-0">
                 <div class="row">
                     <!-- feed d posts -->
                     <div class="container">
@@ -270,19 +270,19 @@
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-4 post" data-post-id="1">
-                                <img src="../img/pf-aridos.jpeg" alt="Ejemplo" class="img-fluid border rounded-3 border-bottom-0 rounded-bottom-0">
+                                <img src="../img/pf-aridos.jpeg" alt="Ejemplo" class="img-fluid border rounded-3">
                             </div>
                             <div class="col-lg-3 col-md-4 col-4 post" data-post-id="2">
-                                <img src="../img/pf-ari.jpeg" alt="Ejemplo" class="img-fluid border rounded-3 border-bottom-0 rounded-bottom-0">
+                                <img src="../img/pf-ari.jpeg" alt="Ejemplo" class="img-fluid border rounded-3">
                             </div>
                             <div class="col-lg-3 col-md-4 col-4 post" data-post-id="3">
-                                <img src="../img/pf-id.jpeg" alt="Ejemplo" class="img-fluid border rounded-3 border-bottom-0 rounded-bottom-0">
+                                <img src="../img/pf-id.jpeg" alt="Ejemplo" class="img-fluid border rounded-3">
                             </div>
                             <div class="col-lg-3 col-md-4 col-4 post" data-post-id="4">
-                                <img src="../img/pf-monachina.jpeg" alt="Ejemplo" class="img-fluid border rounded-3 border-bottom-0 rounded-bottom-0">
+                                <img src="../img/pf-monachina.jpeg" alt="Ejemplo" class="img-fluid border rounded-3">
                             </div>
                             <div class="col-lg-3 col-md-4 col-4 post" data-post-id="5">
-                                <img src="../img/pf-aridos.jpeg" alt="Ejemplo" class="img-fluid border rounded-3 border-bottom-0 rounded-bottom-0">
+                                <img src="../img/pf-aridos.jpeg" alt="Ejemplo" class="img-fluid border rounded-3">
                             </div>
                         </div>
                     </div>
